...
                onPressed: () {
                  logger.d("Notification button pressed.");
                },
              ),
            ],
            title: AutoSizeText(
              "KISGERI24",
              key: const Key("overview_screen_app_bar_title"),
              maxLines: 1,
              overflow: TextOverflow.ellipsis,
              style: kisgeri_design.Figma.typo.body.copyWith(
                color: kisgeri_design.Figma.colors.primaryColor,
                fontWeight: FontWeight.bold,
...
              style: kisgeri_design.Figma.buttons.primaryButtonStyle,
              onPressed: () async {
                await showTimerConfirmationDialog(context);
              },
              child: AutoSizeText(
                key: const Key("overview_screen_start_time_button_text"),
                "INDULHAT A VERSENY!",
                maxLines: 1,
                overflow: TextOverflow.ellipsis,
                style: TextStyle(
                  fontFamily: "Lato",
                  fontWeight: FontWeight.normal,
                  fontSize: 14,
...
