appId: com.kisgeri24.flutterkisgeri24
tags:
  - login
  - new-user
---
- launchApp
## GIVEN the application in a logged out state
- runFlow:
    when:
      notVisible: "Log In"
    file: "utils/logout.yaml"

## WHEN filling the mandatory fields for a user, who hasn't set its start time
- tapOn: "Log In"
- assertVisible: "Email Address"
- assertVisible: "Password"
- tapOn: "Email Address"
- inputText: "kisgeriapp.test@user.com"
- tapOn: "Password"
- inputText: ${USER_PW}
- hideKeyboard # can be flaky on iOS -> https://maestro.mobile.dev/troubleshooting/known-issues#ios-hidekeyboard-flaky

## AND proceeding by tapping on the 'Log In' button
- tapOn: "Log In"

## THEN the expected time set up fields should be there
- assertVisible: "Minutes:"
- assertVisible: "Hours:"
- assertVisible: "All Set!"
